feat: production readiness upgrade — Supabase, Web3 Auth, 30 tools quality, AI connectors, data persistence
Phase 1 — Supabase + Auth:
- Supabase schema with 4 tables (user_profiles, analysis_history, user_favorites, saved_variants) + RLS policies
- Thirdweb Web3 wallet auth (MetaMask, Coinbase, Google, Email, Passkey)
- RBAC permissions system (FREE/PREMIUM/ADMIN) with granular access control
- ConnectWallet component integrated in header

Phase 2 — Universal Tool Quality:
- useToolState universal hook (loading/error/result/progress)
- Shared components: LoadingState, ErrorState, SkipLink, KeyboardShortcuts
- All 30 tools upgraded with role="region", aria-labels, keyboard navigation
- 7 new tool components: pharmacogenomics, microbiome, epigenetic-clock/coach, gene-therapy, rare-variants, immune-response

Phase 3 — Navigation & UX:
- 30 tools metadata registry with 6 categories (Personal, Analysis, Research, Health, Design, Education)
- CategoryNav filter, ToolCard with favorites/premium badges, ToolSearch modal (Ctrl+K)
- Favorites (Supabase + localStorage dual persistence), Recent tools tracking
- History tab in main navigation

Phase 4 — API Integration:
- useAlphaGenomeAPI hook with React Query mutations for predict/score/interval
- NCBI E-utilities and Ensembl REST API clients for data enrichment

Phase 5 — AI Connectors:
- Multi-provider AI service (Claude/GPT/Gemini) on FastAPI backend
- Frontend AI client with chat and genomic data analysis endpoints

Phase 6 — Data Persistence:
- Analysis history CRUD with share links and public share page (/share/[token])
- Saved variants library with notes, tags, significance tracking
- Fernet encryption service for API key storage
- Docs reorganization: presentations moved to docs/Presentaciones/

Made by mbxarts.com The Moon in a Box property

Co-Author: Argodez22

--- a/webapp/frontend/locales/en.json
+++ b/webapp/frontend/locales/en.json
@@ -703,6 +703,34 @@
       "simulateFuture": "Simulate Future",
       "ethicalConsiderations": "Ethical Considerations",
       "newSimulation": "New simulation"
+    },
+    "pharmacogenomics": {
+      "title": "Pharmacogenomics",
+      "description": "Predict how your genome affects drug metabolism via CYP450 enzymes"
+    },
+    "microbiomeConnector": {
+      "title": "Microbiome Connector",
+      "description": "Connect your HLA genotype with personalized gut microbiome recommendations"
+    },
+    "epigeneticClock": {
+      "title": "Epigenetic Clock",
+      "description": "Measure your biological age through DNA methylation patterns and lifestyle impact"
+    },
+    "geneTherapy": {
+      "title": "Gene Therapy Companion",
+      "description": "Explore FDA-approved gene therapies and your personal genetic relevance"
+    },
+    "rareVariants": {
+      "title": "Rare Variants Network",
+      "description": "Connect with the global rare disease community and explore variant databases"
+    },
+    "immuneResponse": {
+      "title": "Immune Response Predictor",
+      "description": "Predict your immune response to pathogens and vaccines based on HLA genotype"
+    },
+    "epigeneticCoach": {
+      "title": "Epigenetic Coach",
+      "description": "Personalized epigenetic intervention plans to silence risk genes and activate potential genes via nutrition, exercise, sleep, and AI coaching"
     }
   }
 }
